# pdf_to_text

./: AGENTS.md  CLAUDE.md  Dockerfile  README.md  download.sh  extract_pdf_text.py  pyproject.toml
.claude/: settings.local.json
examples/txt/: 108.txt  156.txt  207.txt  281.txt  331.txt  384.txt  392.txt  397.txt  46.txt  63.txt
tests/: test_extract_pdf_text.py
